# ezi-crawler

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: rust.yml
src/: chrome.rs  crawler.rs  main.rs  scrapper.rs
