[package]
name = "ezi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tokio = { version = "1.33.0", features = ["full"] }
chromiumoxide = { version = "0.5.4", features = ["tokio-runtime", "_fetcher-rusttls-tokio"] }
url = "2.4.1"
futures = "0.3.29"
async-recursion = "1.0.5"
petgraph = "0.6.4"
par-dfs = { version = "0.0.7", features = ["async"] }
async-trait = "0.1.77"
lazy_static = "1.4.0"
reqwest = "0.11.23"
clap = { version = "4.4.18", features = ["derive"] }
derive_builder = "0.13.0"
tokio-stream = { version = "0.1.14", features = ["full"] }
async-stream = "0.3.5"
csv = "1.3.0"
serde = { version = "1.0.196", features = ["serde_derive"] }
